src/test/testData/AnnotatorTestData.java
public class Test {
  public static void main(String[] args) {
    System.out.println("cicode:website");
    System.out.println("cicode:key with spaces");
    System.out.println("cicode:<error descr="Unresolved property">websit</error>");
  }
}
